--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@catppuccin/vitepress",
   "type": "module",
   "version": "0.1.2",
-  "license": "MIT",
   "description": "📝 Soothing pastel theme for VitePress",
+  "license": "MIT",
   "author": {
     "name": "Catppuccin Org",
     "email": "releases@catppuccin.com",
@@ -12,11 +12,6 @@
   "contributors": [
     "willow <42willow@pm.me>"
   ],
-  "publishConfig": {
-    "access": "public",
-    "provenance": true,
-    "registry": "https://registry.npmjs.org"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/catppuccin/vitepress.git"
@@ -31,15 +26,18 @@
     "theme/"
   ],
   "scripts": {
+    "dev": "vitepress dev site",
+    "build": "vitepress build site",
+    "preview": "vitepress preview site",
     "format": "prettier --write ."
   },
   "devDependencies": {
     "@catppuccin/vitepress": "^0.1.2",
-    "prettier": "^3.3.3",
-    "vitepress": "^1.2.3"
+    "vitepress": "^1.3.4",
+    "prettier": "^3.3.3"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.5.3"
   },
   "packageManager": "pnpm@10.9.0"
 }
